force-app/main/default/objects/SalesMonthOfMASummary__c/SalesMonthOfMASummary__c.object-meta.xml
<CustomObject>
    <label>매출합계(MA별)</label>
    <nameField>
        <label>SalesMonthOfMASummary 이름</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>