force-app/main/default/objects/SalesMonthOfMASummary__c/fields/TotalSalesProfit__c.field-meta.xml
<CustomField>
    <fullName>TotalSalesProfit__c</fullName>
    <label>TotalSalesProfit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>